--- a/index.html
+++ b/index.html
@@ -40,7 +40,24 @@
 
       <button id="submit-btn" class="btn-check">Tell Me!!</button>
 
-      <div id="output-box" class="output"></div>
+      <div id="output-box" class="output">Your Output Will Come Here !</div>
+      <footer class="footer">
+        <div class="footer-header">connect to me socially👇</div>
+        <ul class="social links list-non-bullet">
+            <li class="list-item-inline">
+                <a class="link"href="https://github.com/Nmnjainsite">
+                    <image src="	https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png
+                   " style="width: 30px; border-radius: 0.5rem"></image></a> 
+            </li>
+            <li class="list-item-inline">
+                <a class="link"href="https://instagram.com/namanjain_321"><image src="	https://cdn-icons-png.flaticon.com/512/2111/2111463.png
+                    " style="width: 30px; border-radius: 0.5rem;"></image></a>
+                </li>
+            <li class="list-item-inline">
+                <a class="link"href="https://www.linkedin.com/in/naman-jain-97382b231"><image src="https://www.kindpng.com/picc/m/82-824645_linkedin-logo-black-and-white-png-logo-linkedin.png" style="width: 40px;border-radius: 1rem;"></image></a>
+            </li>
+        </ul>
+    </footer>
       <script src="app.js"></script>
     </main>
 </html>
